--- a/tags119/index.html
+++ b/tags119/index.html
@@ -5,8 +5,337 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tags</title>
+	<style>
+	table, th, td{
+		 border: 1px solid blue!;
+	}
+	
+	
+	</style>
+	<base href="https://www.w3schools.com" target="_blank">
+	
 </head>
 <body>
+
+	<!--DOCTYPE-->
+	
+	<!DOCTYPE>
+	
+	<!--a anchor tag-->
+	
+	<h1>a element</h1>
+	<a href="https://www.w3schools.com" target="_blank">Visit W3Schools</a><br>
+	<a href="mailto:webmaster@example.com">Mail</a>
+	<p>target new page la link open aaga use aagum (target="-blank")</p>
+	 <p>An unvisited link is underlined and blue,
+    A visited link is underlined and purple,
+    An active link is underlined and red.</p>
+    <a href></a>
+	
+	<!--abbr abbreviation tag-->
+	
+	<h1>abbr element</h1>
+	The <abbr title="World Health Organization">WHO</abbr> was founded in 1948.
+	<abbr></abbr>
+	
+	<!--acronym tag-->
+	
+	<h1>acronym element</h1>
+	<p>Not Supported in HTML5.</p>
+	
+	<!--address tag-->
+	
+	<h1>address element</h1>
+	<address>
+		Written by <a href="mailto:webmaster@example.com">mail</a>.<br>
+		Visit us at:<br>
+		Example.com<br>
+		Box 564, Disneyland<br>
+		USA
+	</address>
+	<address></address>
+	
+	<!--applet tag-->
+	
+	<h1>applet element</h1>
+	<p>Not Supported in HTML5.</p>
+	
+	<!--area tag-->
+	
+	<h1>area element</h1>
+	<img src="workplace.jpg" alt="Workplace" usemap="#workmap" width="400" height="379">
+
+	<map name="workmap">
+	  <area shape="rect" coords="34,44,270,350" alt="Computer" href="computer.htm">
+	  <area shape="rect" coords="290,172,333,250" alt="Phone" href="phone.htm">
+	  <area shape="circle" coords="337,300,44" alt="Cup of coffee" href="coffee.htm">
+	</map>
+	<area shape="" coords="" alt="" href="">
+	
+	<!--article tag-->
+	
+		<h2>article element</h2>
+		<p>The aside content should be indirectly related to the surrounding content.</p>
+		<article>
+			<h4>Google Chrome</h4>
+			<p>Google Chrome is a web browser developed by Google, released in 2008. Chrome is the world's most popular web browser today!</p>
+		</article>
+	
+	<!--aside tag-->
+	
+	<h2>aside element</h2>
+		<p>My family and I visited The Epcot center this summer. The weather was nice, and Epcot was amazing! I had a great summer together with my family!</p>
+		<aside>
+			<p>The Epcot center is a theme park at Walt Disney World Resort featuring exciting attractions, international pavilions, award-winning fireworks and seasonal special events.</p>
+		</aside>
+
+		<p>My family and I visited The Epcot center this summer. The weather was nice, and Epcot was amazing! I had a great summer together with my family!</p>
+		<p>My family and I visited The Epcot center this summer. The weather was nice, and Epcot was amazing! I had a great summer together with my family!</p>
+
+	<!--audio tag-->
+	
+	<h2>audio element</h2>
+		<audio controls>
+			<source src="horse.ogg" type="audio/ogg">
+			<source src="horse.mp3" type="audio/mpeg">
+			Your browser does not support the audio tag.
+		</audio>
+		<p>The (audio) tag contains one or more (source) tags with different audio sources. The browser will choose the first source it supports.</p>
+
+	<!--bold tag-->
+
+	<h2>bold element</h2>
+		<p>This is normal text - <b>and this is bold text</b></p>
+
+	<!--base tag-->
+
+	<h2>Base element</h2>
+		<a href="tags/tag_base.asp" target="_blank">HTML base Tag</a>
+
+	<!--basefont tag-->
+	
+	<h1>basefont element</h1>
+	<p>Not Supported in HTML5.</p>
+	
+	<!--bdi tag-->
+	
+	<h2>bdi Bi-Directional Isolation. element</h2>
+		<ul>
+			<li>User <bdi>hrefs</bdi>: 60 points</li>
+			<li>User <bdi>jdoe</bdi>: 80 points</li>
+			<li>User <bdi>إيان</bdi>: 90 points</li>
+		</ul>
+		<p>This element is useful when embedding user-generated content with an unknown text direction.</p>
+		
+	<!--bdo tag-->
+		
+	<h2>bdo  Bi-Directional Override. element</h2>
+	<p>dir important attribute</p>
+	<bdo dir="ltr">
+		<mark>This text will go left-to-right.</mark>
+	</bdo>
+	<br>
+	<bdo dir="rtl">
+		<mark>This text will go right-to-left.</mark>
+	</bdo>
+	<bdo></bdo>
+	
+	<!--big tag-->
+	
+	<h1>big element</h1>
+	<p>Not Supported in HTML5.</p>
+	
+	<!--blockqute tag-->
+	
+	<h2>blockquote element</h2>
+		<p>The blockquote element</p>
+		<p>Here is a quote from WWF's website:</p>
+		<blockquote>
+			For 50 years, WWF has been protecting the future of nature. The world's leading conservation organization, WWF works in 100 countries and is supported by 1.2 million members in the United States and close to 5 million globally.
+		</blockquote>
+	<blockquote></blockquote>
+	
+	<!--body tag-->
+	
+	<h2>body element</h2>
+	The (body) element contains all the contents of an HTML document, such as headings, paragraphs, images, hyperlinks, tables, lists, etc.
+
+	<!--br tag-->
+	<h2>br break element</h2>
+		<p>iam velmurugan<br> from kadayam<br>im completed BE<br> i became a software engineer<br>in one of the top IT company</p>
+	<br>
+	
+	<!--button tag-->
+	
+	<h2>button element </h2>
+
+		<p>Use the :hover selector to change the style of the button when you move the mouse over it.</p>
+		<p><strong>Tip:</strong> Use the transition-duration property to determine the speed of the "hover" effect:</p>
+
+		<button class="button button1">Blue</button>
+		<button class="button button2">Green</button>
+		<button></button>
+		
+	<!--canvas tag-->
+	<h1>canvas element</h1>
+	<p>The <canvas> tag is used to draw graphics, on the fly, via scripting (usually JavaScript).</p>
+	
+	<!--caption tag-->
+	
+	<h2>caption element</h2>
+	<table >
+		<caption>Monthly savings</caption>
+		<tr>
+			<th>Month</th>
+			<th>Savings</th>
+		</tr>
+		<tr>
+			<td>January</td>
+			<td>$100</td>
+		</tr>
+	</table>
+	<caption></caption>
+	
+	<!--center-->
+	
+	<h2>center element</h2>
+		<p>Not Supported in HTML5.</p>
+		The (center)tag was used in HTML4 to center-align text.
+		
+	<!--cite tag-->
+
+	<h2>cite element</h2>
+	
+		<img src="img_the_scream.jpg" width="220" height="277" alt="The Scream">
+		<p><cite>The Scream</cite> by Edward Munch. Painted in 1893.</p>
+	<cite></cite>
+	
+	<!--code tag-->
+
+	<h2>code element</h2>
+	<p>The (code) tag is used to define a piece of computer code. The content inside is displayed in the browser's default monospace font.</p>
+	<code> Ganesh</code>
+	<code></code>
+	
+	<!-- col tag colgroup tag -->
+	
+	<h1>col element & colgroup element</h1>
+	<table>
+		<colgroup>
+			<col span="" style="background-color:red">
+			<col style="background-color:blue">
+			<col style="background-color:yellow">
+		</colgroup>
+		<tr>
+			<th>ISBN</th>
+			<th>Title</th>
+			<th>Price</th>
+		</tr>
+		<tr>
+			<td>3476896</td>
+			<td>My first HTML</td>
+			<td>$53</td>
+		</tr>
+		<tr>
+			<td>5869207</td>
+			<td>My first CSS</td>
+			<td>$49</td>
+		</tr>
+	</table>
+	<col span="" style="">
+	<colgroup></colgroup>
+	
+	<!--data tag-->
+	
+	<h2>data element</h2>
+	The (data) tag is used to add a machine-readable translation of a given content.
+	<ul>
+		<li><data value="21053">Cherry </data></li>
+		<li><data value="21054">Beef </data></li>
+		<li><data value="21055">Snack </data></li>
+	</ul>
+	<data></data>
+	
+	<!--detalist tag-->
+	
+	<h2>The datalist element</h2>
+
+	<form action="/action_page.php" method="get">
+		<label for="browser">Choose your browser from the list:</label>
+			<input list="browsers" name="browser" id="browser">
+				<datalist id="browsers">
+					<option value="Edge">
+					<option value="Firefox">
+					<option value="Chrome">
+					<option value="Opera">
+					<option value="Safari">
+				</datalist>
+			<input type="submit">
+	</form>
+	<datalist></datalist>
+	
+	<!-- dl=defanition list , dt=defanition term , dd=defanition descrebtion -->
+	
+	<h2>dl, dd, dt element</h2>
+		<dl>
+			<dt>Coffee</dt>
+			<dd>Black hot drink</dd>
+			<dt>Milk</dt>
+			<dd>White cold drink</dd>
+		</dl>
+	
+	<!--del tag-->
+	
+	<h2>del delete element</h2>
+		<p>My name is <del>vijay</del> <ins>Ganesh</ins></p>
+
+	<!--details tag--> 
+
+	<h2>details element</h2>
+	<details open>
+		<summary>Epcot Center</summary>
+		<p>Epcot is a theme park at Walt Disney World Resort featuring exciting attractions, international pavilions, award-winning fireworks and seasonal special events.</p>
+	</details>
+	
+	<!--dfn tag-->
+	
+	<h2>dfn element</h2>
+	<p><dfn>www</dfn> is world wide web</p>
+	
+	<hr>
+	
+	<!--dialog tag-->
+	
+	<h2>dialog element</h2>
+	<dialog open>This is an open dialog window</dialog>
+	<br><br><br>
+	<hr>
+	
+	<!--dir tag-->
+	
+	<h2>dir element</h2>
+	<p>Not Supported in HTML5.</p>
+	<br>The (dir) tag was used in HTML 4 to list directory titles.
+	 instead of (ul)tag
+	 
+	<!--div tag-->
+	
+	<h2>div element</h2>
+	<div class="myDiv">
+		<h3>This is a heading in a div element</h3>
+		<p>This is some text in a div element.</p>
+	</div>
+	
+	<!--em-->
+	
+	<h2>em element</h2>
+	this is normal<br>
+	<em>this is emphasis italic style</em>
+
+	
+	<br>
+	<hr>
+	
     <!--Pre tag-->
 	
     <h1>Pre element</h1><p></P>
