--- a/restaurantly/index.html
+++ b/restaurantly/index.html
@@ -27,31 +27,41 @@
 				</div>
 			</div>
 		</section>
-	</div>
-	<header>
-		<section class="container">	
-			<div class="head2">
-				<div class="title">
-					<h2>RESTAURANTLY</h2>
+	
+		<header>
+			<section class="container">	
+				<div class="head2">
+					<div class="title">
+						<h2>RESTAURANTLY</h2>
+					</div>
+					<div class="navbar">
+						<ul>
+							<li><a href="">Home</a></li>
+							<li><a href="">About</a></li>
+							<li><a href="">Menu</a></li>
+							<li><a href="">Special</a></li>
+							<li><a href="">Events</a></li>
+							<li><a href="">Chefs</a></li>
+							<li><a href="">Gallery</a></li>
+							<li><a href="">Drop Down</a></li>
+							<li><a href="">Contact</a></li>
+							<li><a href=""><button class="bookbut">BOOK A TABLE</button></a></li>
+						</ul>
+					</div>
 				</div>
-				<div class="navbar">
-					<ul>
-						<li><a href="">Home</a></li>
-						<li><a href="">About</a></li>
-						<li><a href="">Menu</a></li>
-						<li><a href="">Special</a></li>
-						<li><a href="">Events</a></li>
-						<li><a href="">Chefs</a></li>
-						<li><a href="">Gallery</a></li>
-						<li><a href="">Drop Down</a></li>
-						<li><a href="">Contact</a></li>
-						<li><a href=""><button class="bookbut">BOOK A TABLE</button></a></li>
-					</ul>
-				</div>
+			</section>
+		</header>
+		
+		<section class="container">
+			<div class="welcome">
+				<h1>Welcome to <span>Restaurantly</span></h1>
+				<p>Delivering great food for more than 18 years!</p>
+				<button class="ourmenu">OUR MENU</button><button class="bookatable">BOOK A TABLE</button>
 			</div>
 		</section>
-	</header>
-	
+		
+		
+	</div>
  </body>
  
  </html>
