--- a/restaurantly/index.html
+++ b/restaurantly/index.html
@@ -59,8 +59,31 @@
 				<button class="ourmenu">OUR MENU</button><button class="bookatable">BOOK A TABLE</button>
 			</div>
 		</section>
-		
-		
+	</div>
+	<div class="aboutsection">
+		<section class="container">
+			<div class="aboutbox">
+				<div class="about1">
+					<h2>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h2>
+					<p><i>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</i></p>
+					<ul>
+						<li><iconify-icon class="checkic" icon="bi:check-circle"></iconify-icon>Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li><br>
+						<li><iconify-icon class="checkic" icon="bi:check-circle"></iconify-icon>Duis aute irure dolor in reprehenderit in voluptate velit.</li><br>
+						<li><iconify-icon class="checkic" icon="bi:check-circle"></iconify-icon>Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+						irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.
+						</li>
+					</ul>
+					<p>Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore 
+					eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+					</p>
+				</div>
+				<div class="about2">
+					<div class="about3">
+						<image class="aboutimg" src="image/about.jpg" alt="about" ></image>
+					</div>
+				</div>
+			</div>
+		</section>
 	</div>
  </body>
  
