--- a/restaurantly/index.html
+++ b/restaurantly/index.html
@@ -15,11 +15,15 @@
 		<section class="container">
 			<div class="head1">
 				<div class="number">
+					
+					<div><iconify-icon class="tmtic" icon="ant-design:mobile-outlined"></iconify-icon></div>
 					<p>
-					<iconify-icon class="tmtic" icon="ant-design:mobile-outlined"></iconify-icon> +1 5589 55488 55
+					+1 5589 55488 55
 					</p>
 					<p class="time">
-					<iconify-icon class="tmtic" icon="carbon:time"></iconify-icon> Mon-Sat: 11AM - 23PM
+					<div><iconify-icon class="tmtic" icon="carbon:time"></iconify-icon></div> 
+					<p>
+					Mon-Sat: 11AM - 23PM
 					</p>
 			    </div>
 				<div class="nuside">
@@ -60,6 +64,9 @@
 			</div>
 		</section>
 	</div>
+	
+	<!--firstsection finish-->
+	
 	<div class="aboutsection">
 		<section class="container">
 			<div class="aboutbox">
@@ -85,6 +92,20 @@
 			</div>
 		</section>
 	</div>
+	
+	<div>
+		<section class="container">
+			<div class="">
+				<div>
+					<p></p>
+					<h2></h2>
+				</div>
+				<div>
+				  </div>
+			</div>
+		</section>
+	</div>
+	
  </body>
  
  </html>
