--- a/form/index.htm
+++ b/form/index.htm
@@ -4,7 +4,7 @@
 	    <meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Restaurantly</title>
+		<title>Form</title>
 		<link rel ="icon" type="image/icon" href="image/favicon.png">
 		<link rel="stylesheet" href="style.css">
 		<script src="https://code.iconify.design/iconify-icon/1.0.0/iconify-icon.min.js"></script>
@@ -15,20 +15,68 @@
 		<fieldset>
 			<legend>Table heading</legend>
 			<label>First Name</label>
-			<input type="text">
+			<input type="text" maxlength="10" size="20">
+			
 			<label>Last Name</label>
 			<input type="text">
+			
 			<label>Date Of Birth</label>
 			<input type="date">
-			----General----
+			
+			<label>Date Of Birth With Time</label>
+			<input type="datetime-local"><br><br>
+			
+			------General------
 			<input type="radio" id="age1" name="age">
 			<label for="age1">Male</label>
 			<input type="radio" id="age2" name="age">
 			<label for="age2">Female</label>
 			<input type="radio" id="age3" name="age">
 			<label for="age3">Other</label>
+			
 			<label>Button</label>
-			<input type="button">submit</input>
+			<input type="button" value="Button">
+			
+			<label>Color</label>
+			<input type="color">
+			
+			<label>Hidden</label>
+			<input type="hidden">
+			
+			<label>---Number</label>
+			<input type="number">
+			
+			<label>Telenumber</label>
+			<input type=""><br><br>
+			
+			<label>Select Cars</label>
+			<select>
+				<option value="sele">-------Select------</option>
+				<option value="volvo">Volvo</option>
+				<option value="saab">Saab</option>
+				<option value="mercedes">Mercedes</option>
+				<option value="audi">Audi</option>
+			</select>
+			
+			<label for="browser">Datalist</label>
+			<input list="browsers" name="browser" id="browser">
+			<datalist id="browsers">
+				<option value="a"></option>
+				<option value="b"></option>
+				<option value="c"></option>
+				<option value="d"></option>
+				<option value="e"></option>
+			</datalist>
+			
+			<input type="submit">
+			
+			<input type="range" max="100" min="30"value="90">
+			
+			<input type="checkbox">a
+			<input type="checkbox">b
+			<input type="checkbox">c
+			<input type="checkbox">d
+			
 		</fieldset>
 	</form>
 	
