--- a/form/form.html
+++ b/form/form.html
@@ -9,8 +9,9 @@
 </head>
  <body>
 	 
-	<h1>My Feedback Form</h1>
 	<form>
+	<fieldset>
+		<h1>My Feedback Form</h1>
 		<blockquote>
 			<li><label>Name: </label><input type="text"></li>
 			<li><label>Email: </label><input type="email"></li>
@@ -43,14 +44,35 @@
 					</select>
 		</blockquote>
 		<li><input type="submit" required></li>
+	</fieldset>
 	</form>
-	
+	<br>
+	<br>
+	<br>
 	<hr>
 	<br>
 	<br>
 	<br>
 	<form>
-		<
+		<fieldset>
+		<legend>Application Form</legend>
+			<label>Full Name</label>
+			<input type="text"><br><br>
+			<label>Email  </label>
+			<input type="email"><br><br>
+			<label>Gender</label>
+			<input type="radio">Male
+			<input type="radio">Female<br><br>
+			<label>Nationality</label>
+			<select>
+				<option value="option">Indian</option>
+			</select><br><br>
+			<label>Skills</label>
+			<input type="checkbox">
+			
+			
+		
+		</fieldset>
 	</form>
 	
 	
