--- a/form/index.htm
+++ b/form/index.htm
@@ -13,52 +13,53 @@
  
 	<form>
 		<fieldset>
-			<legend>Table heading</legend>
-			<label>First Name</label>
+			<legend>Table heading :</legend>
+			<label>Text = </label>
+			<label>First Name: </label>
 			<input type="text" maxlength="10" size="20">
 			
-			<label>Last Name</label>
-			<input type="text">
+			<label>Last Name: </label>
+			<input type="text"><br><br>
 			
-			<label>Date Of Birth</label>
-			<input type="date">
+			<label>Date = Date Of Birth: </label>
+			<input type="date"><br><br>
 			
-			<label>Date Of Birth With Time</label>
+			<label>DateTime-Local = Date Of Birth With Time: </label>
 			<input type="datetime-local"><br><br>
 			
-			------General------
+			<label>Radio = Gender: </label>
 			<input type="radio" id="age1" name="age">
 			<label for="age1">Male</label>
 			<input type="radio" id="age2" name="age">
 			<label for="age2">Female</label>
 			<input type="radio" id="age3" name="age">
-			<label for="age3">Other</label>
+			<label for="age3">Other</label><br><br>
 			
-			<label>Button</label>
-			<input type="button" value="Button">
+			<label>Button: </label>
+			<input type="button" value="Button"><br><br>
 			
-			<label>Color</label>
-			<input type="color">
+			<label>Color: </label>
+			<input type="color"><br><br>
 			
-			<label>Hidden</label>
-			<input type="hidden">
+			<label>Hidden: </label>
+			<input type="hidden"><br><br>
 			
-			<label>---Number</label>
-			<input type="number">
+			<label>Number: </label>
+			<input type="number"><br><br>
 			
-			<label>Telenumber</label>
-			<input type=""><br><br>
+			<label>Tel Number: </label>
+			<input type="tel" pattern="[0-9]{4}-[0-9]{3}-[0-9]{3}" placeholder="1234-123-123"><br><br>
 			
-			<label>Select Cars</label>
+			<label>Select = Select Cars: </label>
 			<select>
 				<option value="sele">-------Select------</option>
 				<option value="volvo">Volvo</option>
 				<option value="saab">Saab</option>
 				<option value="mercedes">Mercedes</option>
 				<option value="audi">Audi</option>
-			</select>
+			</select><br><br>
 			
-			<label for="browser">Datalist</label>
+			<label for="browser">Datalist: </label>
 			<input list="browsers" name="browser" id="browser">
 			<datalist id="browsers">
 				<option value="a"></option>
@@ -66,20 +67,78 @@
 				<option value="c"></option>
 				<option value="d"></option>
 				<option value="e"></option>
-			</datalist>
+			</datalist><br><br>
 			
-			<input type="submit">
+			<label>Submit: </label>
+			<input type="submit"><br><br>
 			
-			<input type="range" max="100" min="30"value="90">
+			<label>Range: </label>
+			<input type="range" max="100" min="30"value="70"><br><br>
 			
+			<label>CheckBox: </label>
 			<input type="checkbox">a
 			<input type="checkbox">b
 			<input type="checkbox">c
-			<input type="checkbox">d
+			<input type="checkbox">d<br><br>
 			
+			<label>Email: </label>
+			<input type="email"><br><br>
+			
+			<label>Password</label>
+			<input type="password"><br><br>
+			
+			<label>URL</label>
+			<input type="url"><br><br>
+			
+			<label>Time</label>
+			<input type="time"><br><br>
+			
+			<label>Month</label>
+			<input type="month"><br><br>
+			
+			<label>Week</label>
+			<input type="week"><br><br>
+			
+			<label>Search</label>
+			<input type="search"><br><br>
+			
+			<label>Reset</label>
+			<input type="reset"><br><br>
+			
+			<label>File</label>
+			<input type="file"><br><br>
+			
+			<label>Image</label>
+			<input type="image"><br><br>
 		</fieldset>
 	</form>
 	
+	<form>
+		<fieldset>
+			<input type="button">
+			<input type="checkbox">
+			<input type="color">
+			<input type="date">
+			<input type="datetime-local">
+			<input type="email">
+			<input type="file">
+			<input type="hidden">
+			<input type="image">
+			<input type="month">
+			<input type="number">
+			<input type="password">
+			<input type="radio">
+			<input type="range">
+			<input type="reset">
+			<input type="search">
+			<input type="submit">
+			<input type="tel">
+			<input type="text">
+			<input type="time">
+			<input type="url">
+			<input type="week">
+		</fieldset>
+	</form>
  </body>
  
  </html>
