--- a/restaurantly/index.html
+++ b/restaurantly/index.html
@@ -93,15 +93,30 @@
 		</section>
 	</div>
 	
-	<div>
+	<div class="thirdsection">
 		<section class="container">
-			<div class="">
-				<div>
-					<p></p>
-					<h2></h2>
+			<div class="whyusfull">
+				<div class="whyus">
+					<p>WHY US</p>
+					<h1>Why Choose Our Restaurant</h1>
 				</div>
-				<div>
-				  </div>
+				<div class="no123box">
+					<div class="no123">
+						<h1>01</h1>
+						<h2>Lorem Ipsum</h2>
+						<p>Ulamco laboris nisi ut aliquip ex ea commodo consequat. Et consectetur ducimus vero placeat</p>
+					</div>
+					<div class="no123">
+						<h1>02</h1>
+						<h2>Repellat Nihil</h2>
+						<p>Dolorem est fugiat occaecati voluptate velit esse. Dicta veritatis dolor quod et vel dire leno para dest</p>
+					</div>
+					<div class="no123">
+						<h1>03</h1>
+						<h2>Ad ad velit qui</h2>
+						<p>Molestiae officiis omnis illo asperiores. Aut doloribus vitae sunt debitis quo vel nam quis</p>
+					</div>
+				</div>
 			</div>
 		</section>
 	</div>
