--- a/restaurantly/index.html
+++ b/restaurantly/index.html
@@ -93,6 +93,8 @@
 		</section>
 	</div>
 	
+	<!--secondsectioin finish-->
+	
 	<div class="thirdsection">
 		<section class="container">
 			<div class="whyusfull">
@@ -121,6 +123,42 @@
 		</section>
 	</div>
 	
+	<!--thirdsectioin finish-->
+	
+	<div class="fourthsection">
+		<section class="container">
+			<div class="menu">
+				<div class="checkour">
+					<p>MENU</p>
+					<h1>Check Our Tasty Menu</h1>
+				</div>	
+				<div class="menulink">
+					<ul>
+						<li><a href="">All</a></li>
+						<li><a href="">Starters</a></li>
+						<li><a href="">Salads</a></li>
+						<li><a href="">Specialty</a></li>	
+					</ul>
+				</div>
+				<div class="menulist">
+					<div class="menulist1">
+						<div class="menuitem">
+							<div class="menuimg">
+								<image src="image/menu/labster-bisque.jpg" alt="image">
+							</div>
+							<div class="menucontent">
+								<h1><span></span></h1>
+								<h4><i></i></h4>
+							</div>
+						</div>
+					</div>
+					<div class="menulist2">
+					</div>
+					
+				</div>
+			</div>
+		</section>
+	</div>
  </body>
  
  </html>
