--- a/restaurantly/index.html
+++ b/restaurantly/index.html
@@ -144,52 +144,88 @@
 					<div class="menulist1">
 						<div class="menuitem">
 							<div class="menuimg">
-								<image src="image/menu/labster-bisque.jpg" alt="image">
+								<image class="imgmenu" src="image/menu/lobster-bisque.jpg" alt="image">
 							</div>
 							<div class="menucontent">
-								<h1>Lobster Bisque<span></span></h1>
+								<h1>Lobster Bisque<sup> .................................................................................... </sup><span>$5.95</span></h1>
 								<h4><i>Lorem, deren, trataro, filede, nerada</i></h4>
 							</div>
 						</div>
 						<div class="menuitem">
 							<div class="menuimg">
-								<image src="image/menu/labster-bisque.jpg" alt="image">
+								<image class="imgmenu" src="image/menu/cake.jpg" alt="image">
 							</div>
 							<div class="menucontent">
-								<h1><span></span></h1>
-								<h4><i></i></h4>
+								<h1>Crab Cake<sup> ................................................................................................. </sup><span>$7.95</span></h1>
+								<h4><i>A delicate crab cake served on a toasted roll with lettuce and tartar sauc</i></h4>
 							</div>
 						</div>
 						<div class="menuitem">
 							<div class="menuimg">
-								<image src="image/menu/labster-bisque.jpg" alt="image">
+								<image class="imgmenu" src="image/menu/tuscan-grilled.jpg" alt="image">
 							</div>
 							<div class="menucontent">
-								<h1><span></span></h1>
-								<h4><i></i></h4>
+								<h1>Tuscan Grilled<sup> ....................................................................................... </sup><span>$9.95</span></h1>
+								<h4><i>Grilled chicken with provolone, artichoke hearts, and roasted red pesto</i></h4>
 							</div>
 						</div>
 						<div class="menuitem">
 							<div class="menuimg">
-								<image src="image/menu/labster-bisque.jpg" alt="image">
+								<image class="imgmenu" src="image/menu/greek-salad.jpg" alt="image">
 							</div>
 							<div class="menucontent">
-								<h1><span></span></h1>
-								<h4><i></i></h4>
+								<h1>Greek Salad<sup> ............................................................................................ </sup><span>$9.95</span></h1>
+								<h4><i>Fresh spinach, crisp romaine, tomatoes, and Greek olives</i></h4>
 							</div>
 						</div>
 						<div class="menuitem">
 							<div class="menuimg">
-								<image src="image/menu/labster-bisque.jpg" alt="image">
+								<image class="imgmenu" src="image/menu/lobster-roll.jpg" alt="image">
 							</div>
 							<div class="menucontent">
-								<h1><span></span></h1>
-								<h4><i></i></h4>
+								<h1>Lobster Roll<sup> .......................................................................................... </sup><span>$12.95</span></h1>
+								<h4><i>Plump lobster meat, mayo and crisp lettuce on a toasted bulky roll</i></h4>
 							</div>
 						</div>
 						
 					</div>
 					<div class="menulist2">
+						<div class="menuitem">
+							<div class="menuimg">
+								<image class="imgmenu" src="image/menu/bread-barrel.jpg" alt="image">
+							</div>
+							<div class="menucontent">
+								<h1>Bread Barrel<sup> ...................................................................................... </sup><span>$12.95</span></h1>
+								<h4><i>Lorem, deren, trataro, filede, nerada</i></h4>
+							</div>
+						</div>
+						<div class="menuitem">
+							<div class="menuimg">
+								<image class="imgmenu" src="image/menu/caesar.jpg" alt="image">
+							</div>
+							<div class="menucontent">
+								<h1>Caesar Selections<sup> .......................................................................... </sup><span>$12.95</span></h1>
+								<h4><i>Lorem, deren, trataro, filede, nerada</i></h4>
+							</div>
+						</div>
+						<div class="menuitem">
+							<div class="menuimg">
+								<image class="imgmenu" src="image/menu/mozzarella.jpg" alt="image">
+							</div>
+							<div class="menucontent">
+								<h1>Mozzarella Stick<sup> ............................................................................... </sup><span>$12.95</span></h1>
+								<h4><i>Lorem, deren, trataro, filede, nerada</i></h4>
+							</div>
+						</div>
+						<div class="menuitem">
+							<div class="menuimg">
+								<image class="imgmenu" src="image/menu/spinach-salad.jpg" alt="image">
+							</div>
+							<div class="menucontent">
+								<h1>Spinach Salad<sup> .................................................................................... </sup><span>$12.95</span></h1>
+								<h4><i>Fresh spinach with mushrooms, hard boiled egg, and warm bacon vinaigrette</i></h4>
+							</div>
+						</div>
 					</div>
 					
 				</div>
