--- a/resume/index.html
+++ b/resume/index.html
@@ -9,12 +9,45 @@
 		<link rel="stylesheet" href="style.css">
 </head>
  <body>
- 
-	<header>
-		<h1>Ganesh.	M</h1>
-		<h3>TRAINEE SOFTWARE ENGINEER</h3>
-		<p><a href="#">mganeshdame1007@gmail.com</a>|Sambavarvadakarai,Tenkasi</p>
-	</header>
- 
+	<div class="container">
+		<header>
+			<h1>Ganesh.M</h1>
+			<h3>SOFTWARE ENGINEER</h3>
+			<p><a href="mailto:mganeshdame1007@gmail.com">mganeshdame1007@gmail.com</a> | <a href="telto:91-9629085290">tel-9629085290</a> | <span>Tenkasi.</span></p>
+		</header>
+		<br>
+		<hr>
+		<div class="career">
+			<h2>CAREER OBJECTIVE</h2>
+			<p>
+				To work with a company with appreciates innovation so that I can enhance my
+				knowledge and skills to give my best for the growth of the company.
+			</p>
+		</div>
+		
+		<div>
+			<h2>ACADEMIC DETAILS</h2>
+			<h3>BE | 6.90 CGPA</h3>
+			<p>Amrita College Of Engineering and Technology, Nagercoil.</p>
+			<h4>2014 – 2018</h4>
+		</div>
+		
+		<div>
+			<h3>HSC | 54 %</h3>
+			<p>Government Higher Secondary School, Vilavancode</p>
+			<h4>2013 – 2014</h4>
+		</div>
+		
+		<div>
+			<h3>SSLC | 79 %</h3>
+			<p>Government Higher Secondary, Vilavancode</p>
+			<h4>2011 – 2012</h4>
+		</div>
+		
+		<div>
+			<h2>SKILL DEVELOPMENT TRAINING</h2>
+		</div>
+		
+	</div>
  </body>
  </html>
