--- a/resume/index.html
+++ b/resume/index.html
@@ -11,12 +11,13 @@
  <body>
 	<div class="container">
 		<header>
-			<h1>Ganesh.M</h1>
+			<h1>GANESH.M</h1>
 			<h3>SOFTWARE ENGINEER</h3>
 			<p><a href="mailto:mganeshdame1007@gmail.com">mganeshdame1007@gmail.com</a> | <a href="telto:91-9629085290">tel-9629085290</a> | <span>Tenkasi.</span></p>
 		</header>
-		<br>
+	
 		<hr>
+		
 		<div class="career">
 			<h2>CAREER OBJECTIVE</h2>
 			<p>
@@ -25,20 +26,20 @@
 			</p>
 		</div>
 		
-		<div>
+		<div class="academi">
 			<h2>ACADEMIC DETAILS</h2>
 			<h3>BE | 6.90 CGPA</h3>
 			<p>Amrita College Of Engineering and Technology, Nagercoil.</p>
 			<h4>2014 – 2018</h4>
 		</div>
 		
-		<div>
+		<div class="academi">
 			<h3>HSC | 54 %</h3>
 			<p>Government Higher Secondary School, Vilavancode</p>
 			<h4>2013 – 2014</h4>
 		</div>
 		
-		<div>
+		<div class="academi">
 			<h3>SSLC | 79 %</h3>
 			<p>Government Higher Secondary, Vilavancode</p>
 			<h4>2011 – 2012</h4>
@@ -46,6 +47,26 @@
 		
 		<div>
 			<h2>SKILL DEVELOPMENT TRAINING</h2>
+			<table>
+				<tr>
+					<th>
+						<h3>Front End Creative JS</h3>
+						<p>Fabevy Technologies, Chennai</p>
+					</th>
+					<td>
+						<p>February 2022 – July 2022</p>
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<h4>Skills Attained</h4>
+						<ul>
+							<li>Build responsive web pages using Bootstrap</li>
+							<li>Implement user interactions</li>
+						</ul>
+					</td>
+				</tr>
+			</table>
 		</div>
 		
 	</div>
