--- a/resume/index.html
+++ b/resume/index.html
@@ -45,20 +45,20 @@
 			<h4>2011 – 2012</h4>
 		</div>
 		
-		<div>
+		<div class="skill">
 			<h2>SKILL DEVELOPMENT TRAINING</h2>
-			<table>
+			<table class="firsttable">
 				<tr>
-					<th>
+					<td>
 						<h3>Front End Creative JS</h3>
-						<p>Fabevy Technologies, Chennai</p>
-					</th>
+						<h4>Fabevy Technologies, Chennai</h4>
+					</td>
 					<td>
 						<p>February 2022 – July 2022</p>
 					</td>
 				</tr>
 				<tr>
-					<td>
+					<td colspan="2">
 						<h4>Skills Attained</h4>
 						<ul>
 							<li>Build responsive web pages using Bootstrap</li>
