--- a/restaurantly/index.html
+++ b/restaurantly/index.html
@@ -276,16 +276,56 @@
 			</div>	
 			<div class="eventbox">
 				<div class="eventbox1">
-					<image src="" alt=""></image>
+					<image class="eveimg" src="image/event-private.jpg" alt=""></image>
 				</div>
 				<div class="eventbox2">
-					<h1></h1>
-					<h2></h2>
+					<h1>Private Parties</h1>
+					<h2>$290</h2>
+					<p><i>
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                    magna aliqua.</i>
+					</p>
+					<ul>
+						<li>Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
+						<li>Duis aute irure dolor in reprehenderit in voluptate velit.</li>
+						<li>Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
+					</ul>
+					<p>
+					 Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+                    velit esse cillum dolore eu fugiat nulla pariatur
+					</p>
 				</div>
 			</div>
 		</div>
 	</section>
 	
+	<!--sixth section finish-->
+	
+	<section class="saventhsection">
+		<div class="container">
+			<div class="reservation">
+				<p>RESERVATION</p>
+				<h1>Book a Table</h1>
+			</div>
+			<div class="reserbox">
+				<form>
+					<div class="reform1">
+						<input class="refor1" type="text" name="" id="" placeholder="Your Name">
+						<input class="refor1" type="email" name="" id="" placeholder="Your Email">
+						<input class="refor1" type="tel" name="" id="" placeholder="Your Phone">
+					</div>
+					<div class="reform2">
+						<input class="refor1" type="text" name="" id="" placeholder="Date">
+						<input class="refor1" type="text" name="" id="" placeholder="Time">
+						<input class="refor1" type="number" name="" id="" placeholder="# of people">
+					</div>
+					<div class="reform3">
+						<textarea></textarea>
+					</div>
+				</form>
+			</div>
+		</div>
+	</section>
  </body>
  
  </html>
