--- a/devfolio/index.html
+++ b/devfolio/index.html
@@ -25,11 +25,17 @@
 						<li><a href="">Blog</a></li>
 						<li><a href="">Drop Down</a></li>
 						<li><a href="">Contact</a></li>
+						
+						<div class="navicon">
+							<iconify-icon icon="ei:navicon"></iconify-icon>
+						</div>
 					</ul>
+					
 				</div>
 			</div>
 		</section>
 	</header>
+	<!--
 	<div class="banner">
 		<section class="cantainer">
 			<div class="bannercontent">
@@ -38,6 +44,9 @@
 			</div>
 		</section>
 	</div>
+	
+	<!--first section finish-
+	
 	<div class="aboutbox">
 		<section class="container">
 			<div class="inabout">
@@ -83,6 +92,9 @@
 			</div>
 		</section>
 	</div>
+	
+	
+	
 	<div class="sfout">
 		<section class="container">
 			<div class="serviesfull">
@@ -247,7 +259,9 @@
 				<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
 				<div class="blogline"></div>
 			</div>
-	<!--.new one.-->
+			
+	<!--new one--
+	
 			<div class="blogflex">
 				<div class="blogbox">
 					<div class="blogimg">
@@ -328,7 +342,8 @@
 			
 	    </section>
 	</div>
-   <!--End of Blog-->
+	
+   <!--End of Blog--
 
     <div class="send">
         <section class="container">
@@ -372,7 +387,8 @@
 	    </section>
     </div>
   
-   <!--End of Main-->
+   <!--End of Main--
+   
    <footer>
         <div class="container">
 	        <div class="footercontent"> 
@@ -385,6 +401,6 @@
 		    </div>  
 	    </div>
    </footer>
-	
+	-->
  </body>
  </html>
