--- a/devfolio/index.html
+++ b/devfolio/index.html
@@ -27,7 +27,8 @@
 						<li><a href="">Contact</a></li>
 						
 						<div class="navicon">
-							<iconify-icon icon="ei:navicon"></iconify-icon>
+							<iconify-icon icon="fontisto:nav-icon"></iconify-icon>
+							<iconify-icon icon="fontisto:nav-icon"></iconify-icon>
 						</div>
 					</ul>
 					
